workloads/overlays/dev/trips/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trips
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
